# Sipzy

./: .gitignore  README.md
Sipzy/: .env.example  .gitignore  Anchor.toml  README.md  SETUP_SIPZY.md  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.test.json
Sipzy/app/: page.tsx
Sipzy/app/api/auth/nonce/: route.ts
Sipzy/app/api/auth/session/: route.ts
Sipzy/app/api/auth/verify/: route.ts
Sipzy/app/api/auth/youtube/: route.ts
Sipzy/app/api/auth/youtube/callback/: route.ts
Sipzy/app/api/creator/profile/: route.ts
Sipzy/app/api/creator/videos/: route.ts
Sipzy/app/api/creator/videos/[id]/: route.ts
Sipzy/app/api/cron/sync-videos/: route.ts
Sipzy/app/api/cron/update-stats/: route.ts
Sipzy/app/api/discover/creators/: route.ts
Sipzy/app/api/discover/streams/: route.ts
Sipzy/app/api/discover/trending/: route.ts
Sipzy/app/api/pool/[address]/: route.ts
Sipzy/app/api/search/: route.ts
Sipzy/app/creator/[channelId]/: page.tsx
Sipzy/app/dashboard/: page.tsx
Sipzy/app/search/: page.tsx
Sipzy/app/stream/[videoId]/: page.tsx
Sipzy/app/token/[id]/: page.tsx
Sipzy/components/: bonding-curve-chart.tsx  coin-card.tsx  search-bar.tsx  trading-sidebar.tsx  wallet-auth-button.tsx
Sipzy/components/providers/: wallet-provider.tsx
Sipzy/lib/: anchor-client.ts  auth.ts  db.ts  pinata.ts  program.ts  youtube.ts
Sipzy/prisma/: schema.prisma
Sipzy/prisma/migrations/20260103174443_init/: migration.sql
Sipzy/programs/sipzy_vault/: Cargo.toml
Sipzy/programs/sipzy_vault/src/: lib.rs
Sipzy/tests/: sipzy_vault.ts
