[package]
name = "sipzy_vault"
version = "0.1.0"
description = "Sipzy Bonding Curve Vault - Creator Token Economy"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sipzy_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

# Note: anchor-cli is version 0.32.1, but we use 0.30.1 libs for stability

